Implement Zero-Shot Head with Normalized Similarity

--- a/MAVL_Phase2_TextEmbedding.ipynb
+++ b/MAVL_Phase2_TextEmbedding.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -32,9 +18,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "drive.mount('/content/drive')"
-      ],
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -42,19 +26,38 @@
         "id": "siz1PdBg2Wok",
         "outputId": "63b16717-68cc-4674-9437-267174616d6f"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mounted at /content/drive\n"
           ]
         }
+      ],
+      "source": [
+        "drive.mount('/content/drive')"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZuxUK2h32WiQ",
+        "outputId": "053f8007-a865-470e-aff7-f08766c3de21"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "dict_keys(['Atelectasis', 'Cardiomegaly', 'Consolidation', 'Edema', 'Pleural Effusion', 'Pneumonia', 'Pneumothorax'])\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "file_path = '/content/drive/MyDrive/disease_descriptions.json'\n",
@@ -71,71 +74,63 @@
         "    full_text = \" \".join(descriptions)\n",
         "    disease_full_texts[disease] = full_text\n",
         "\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ZuxUK2h32WiQ",
-        "outputId": "053f8007-a865-470e-aff7-f08766c3de21"
-      },
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "dict_keys(['Atelectasis', 'Cardiomegaly', 'Consolidation', 'Edema', 'Pleural Effusion', 'Pneumonia', 'Pneumothorax'])\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# for disease, text in disease_full_texts.items():\n",
-        "#     print(f\"{disease}:\\n{text}\\n\")"
-      ],
-      "metadata": {
-        "id": "xw6Thkke5NGi"
-      },
-      "execution_count": 23,
-      "outputs": []
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {
+        "id": "xw6Thkke5NGi"
+      },
+      "outputs": [],
+      "source": [
+        "# for disease, text in disease_full_texts.items():\n",
+        "#     print(f\"{disease}:\\n{text}\\n\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 37,
+      "metadata": {
+        "id": "To-D8uHmEnzI"
+      },
+      "outputs": [],
       "source": [
         "texts = []\n",
         "labels = []\n",
         "for i, disease in enumerate(disease_full_texts.keys()):\n",
         "    texts.append(disease_full_texts[disease])\n",
         "    labels.append(i)\n"
-      ],
-      "metadata": {
-        "id": "To-D8uHmEnzI"
-      },
-      "execution_count": 37,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# texts"
-      ],
+      "execution_count": 33,
       "metadata": {
         "id": "9O37vL4KEpjD"
       },
-      "execution_count": 33,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# texts"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "model_name = \"emilyalsentzer/Bio_ClinicalBERT\"\n",
-        "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
-        "model = AutoModel.from_pretrained(model_name).to(device)\n",
-        "model.eval()"
-      ],
+      "execution_count": 39,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -143,10 +138,8 @@
         "id": "4-XcXzqVAc5v",
         "outputId": "13103341-c3e3-41ad-e163-f3b68dd649db"
       },
-      "execution_count": 39,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "BertModel(\n",
@@ -192,13 +185,25 @@
               ")"
             ]
           },
+          "execution_count": 39,
           "metadata": {},
-          "execution_count": 39
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "model_name = \"emilyalsentzer/Bio_ClinicalBERT\"\n",
+        "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+        "model = AutoModel.from_pretrained(model_name).to(device)\n",
+        "model.eval()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 42,
+      "metadata": {
+        "id": "f1B3oQDpBNcd"
+      },
+      "outputs": [],
       "source": [
         "disease_embeddings = {}\n",
         "\n",
@@ -221,34 +226,43 @@
         "\n",
         "\n",
         "        disease_embeddings[disease] = cls_embedding.squeeze(0).cpu()\n"
-      ],
-      "metadata": {
-        "id": "f1B3oQDpBNcd"
-      },
-      "execution_count": 42,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# disease_embeddings"
-      ],
+      "execution_count": 45,
       "metadata": {
         "id": "ow3Oc2vpTdzw"
       },
-      "execution_count": 45,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# disease_embeddings"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "torch.save(disease_embeddings, '/content/drive/MyDrive/disease_text_embeddings.pt')"
-      ],
+      "execution_count": 44,
       "metadata": {
         "id": "0jk9ijWPTrQd"
       },
-      "execution_count": 44,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "torch.save(disease_embeddings, '/content/drive/MyDrive/disease_text_embeddings.pt')"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
