Implement Zero-Shot Head with Normalized Similarity

--- a/MultiAspect_VisionLanguage_Model.ipynb
+++ b/MultiAspect_VisionLanguage_Model.ipynb
@@ -22,7 +22,7 @@
       "metadata": {
         "id": "EubSJMlnuxBy"
       },
-      "execution_count": 118,
+      "execution_count": 155,
       "outputs": []
     },
     {
@@ -40,7 +40,7 @@
       "metadata": {
         "id": "RMTETBeUx6QP"
       },
-      "execution_count": 119,
+      "execution_count": 156,
       "outputs": []
     },
     {
@@ -54,9 +54,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "24eWYZxGkcyq",
-        "outputId": "05f31aa7-1051-4ec2-d2f9-fdb0d1ceb163"
+        "outputId": "a2a93406-8065-4fcb-aa40-90fe8390befb"
       },
-      "execution_count": 83,
+      "execution_count": 157,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -66,19 +66,19 @@
             ]
           },
           "metadata": {},
-          "execution_count": 83
+          "execution_count": 157
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 158,
       "metadata": {
         "id": "b78K44szm6sw",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8665124a-ff90-4eba-f551-29c31b0cf9ef"
+        "outputId": "7ac27fb0-1a19-440c-a44a-f312e6c727b6"
       },
       "outputs": [
         {
@@ -102,7 +102,7 @@
       "metadata": {
         "id": "R75cTe-Edo_7"
       },
-      "execution_count": 85,
+      "execution_count": 159,
       "outputs": []
     },
     {
@@ -114,7 +114,7 @@
       "metadata": {
         "id": "vqlzf-FNyLAY"
       },
-      "execution_count": 86,
+      "execution_count": 160,
       "outputs": []
     },
     {
@@ -126,7 +126,7 @@
       "metadata": {
         "id": "MufLagBD0bae"
       },
-      "execution_count": 87,
+      "execution_count": 161,
       "outputs": []
     },
     {
@@ -137,7 +137,7 @@
       "metadata": {
         "id": "FYMz050WfyS1"
       },
-      "execution_count": 88,
+      "execution_count": 162,
       "outputs": []
     },
     {
@@ -150,9 +150,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UGMFnq3mf-ib",
-        "outputId": "bc4f83d7-af03-4bc9-d4be-97a7efb46bab"
+        "outputId": "fb4715fd-dec8-4377-f3bc-ac47c76ca8bb"
       },
-      "execution_count": 89,
+      "execution_count": 163,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -168,7 +168,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 89
+          "execution_count": 163
         }
       ]
     },
@@ -182,9 +182,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xZU--edUdvPr",
-        "outputId": "1ababd12-2fcf-473a-8aa0-28fc64348123"
+        "outputId": "0eca4bd0-eef7-4e6f-8a79-1476b1613eb5"
       },
-      "execution_count": 90,
+      "execution_count": 164,
       "outputs": [
         {
           "output_type": "stream",
@@ -218,7 +218,7 @@
       "metadata": {
         "id": "VN_wzxEpgy50"
       },
-      "execution_count": 91,
+      "execution_count": 165,
       "outputs": []
     },
     {
@@ -227,7 +227,7 @@
       "metadata": {
         "id": "_Gy-3ZL3jGYG"
       },
-      "execution_count": 91,
+      "execution_count": 165,
       "outputs": []
     },
     {
@@ -254,7 +254,7 @@
       "metadata": {
         "id": "higyoo6ujAID"
       },
-      "execution_count": 92,
+      "execution_count": 166,
       "outputs": []
     },
     {
@@ -263,7 +263,7 @@
       "metadata": {
         "id": "uOs-5qljhD4i"
       },
-      "execution_count": 92,
+      "execution_count": 166,
       "outputs": []
     },
     {
@@ -274,7 +274,7 @@
       "metadata": {
         "id": "GoVbWlhOiIhZ"
       },
-      "execution_count": 93,
+      "execution_count": 167,
       "outputs": []
     },
     {
@@ -285,7 +285,7 @@
       "metadata": {
         "id": "_Ac_2v9siu9m"
       },
-      "execution_count": 94,
+      "execution_count": 168,
       "outputs": []
     },
     {
@@ -296,7 +296,7 @@
       "metadata": {
         "id": "DOI6778yh_63"
       },
-      "execution_count": 95,
+      "execution_count": 169,
       "outputs": []
     },
     {
@@ -309,9 +309,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dVSSawZ1jch7",
-        "outputId": "5dd60196-462b-4f26-e690-d599a9631eeb"
+        "outputId": "f3d24985-73fc-4855-9b7c-abaa999a5a00"
       },
-      "execution_count": 96,
+      "execution_count": 170,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -327,7 +327,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 96
+          "execution_count": 170
         }
       ]
     },
@@ -337,24 +337,22 @@
       "metadata": {
         "id": "lMkn0L8rjcgf"
       },
-      "execution_count": 96,
+      "execution_count": 170,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# ساخت ماتریس تصویری: [N, r]\n",
         "img_keys = list(image_embeddings.keys())\n",
         "img_tensor = torch.stack([image_embeddings[k] for k in img_keys])  # [N, r]\n",
         "\n",
-        "# ساخت ماتریس متنی: [C, r]\n",
         "disease_keys = list(text_embeddings.keys())\n",
         "text_tensor = torch.stack([text_embeddings[k] for k in disease_keys])  # [C, r]\n"
       ],
       "metadata": {
         "id": "bSZ6y8iE0__9"
       },
-      "execution_count": 97,
+      "execution_count": 171,
       "outputs": []
     },
     {
@@ -368,9 +366,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_dnTzGpa1BPz",
-        "outputId": "e36fcc3d-3a19-4681-804c-2cc10403ce71"
+        "outputId": "e1f7b958-9a82-4954-8e66-68b2bb009f2a"
       },
-      "execution_count": 98,
+      "execution_count": 172,
       "outputs": [
         {
           "output_type": "stream",
@@ -392,7 +390,7 @@
       "metadata": {
         "id": "kEaDlwLmXipC"
       },
-      "execution_count": 99,
+      "execution_count": 173,
       "outputs": []
     },
     {
@@ -404,7 +402,7 @@
       "metadata": {
         "id": "qiPi9jz6lNvP"
       },
-      "execution_count": 101,
+      "execution_count": 174,
       "outputs": []
     },
     {
@@ -416,7 +414,7 @@
       "metadata": {
         "id": "EQnxIqSElO8U"
       },
-      "execution_count": 102,
+      "execution_count": 175,
       "outputs": []
     },
     {
@@ -427,7 +425,7 @@
       "metadata": {
         "id": "euGtaFyXlDMe"
       },
-      "execution_count": 104,
+      "execution_count": 176,
       "outputs": []
     },
     {
@@ -436,10 +434,22 @@
         "print(image_repr.size())"
       ],
       "metadata": {
-        "id": "9vs51LZlXlz5"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9vs51LZlXlz5",
+        "outputId": "ab21d440-7f37-4c7d-ee99-1a2c81478d66"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 177,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([234, 64])\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -449,7 +459,7 @@
       "metadata": {
         "id": "8PjCMSO-XrW3"
       },
-      "execution_count": 105,
+      "execution_count": 178,
       "outputs": []
     },
     {
@@ -460,7 +470,7 @@
       "metadata": {
         "id": "oghTa3nbXxVJ"
       },
-      "execution_count": null,
+      "execution_count": 179,
       "outputs": []
     },
     {
@@ -472,7 +482,7 @@
       "metadata": {
         "id": "LFIIBDNTX_GZ"
       },
-      "execution_count": 106,
+      "execution_count": 180,
       "outputs": []
     },
     {
@@ -484,7 +494,7 @@
       "metadata": {
         "id": "G54bZuEDYD1A"
       },
-      "execution_count": 108,
+      "execution_count": 181,
       "outputs": []
     },
     {
@@ -497,25 +507,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7sp5mZ0NYIFJ",
-        "outputId": "f2f43be5-73c7-4088-ba7d-c2c1542890a1"
+        "outputId": "f276bbb9-4a99-46d7-fc15-69f1b9de7426"
       },
-      "execution_count": 109,
+      "execution_count": 182,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([[1., 0., 0.,  ..., 0., 0., 0.],\n",
+              "tensor([[0., 0., 0.,  ..., 0., 0., 0.],\n",
               "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
               "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
               "        ...,\n",
-              "        [1., 0., 0.,  ..., 0., 0., 0.],\n",
-              "        [1., 0., 0.,  ..., 0., 0., 0.],\n",
-              "        [1., 0., 0.,  ..., 0., 0., 0.]])"
+              "        [1., 1., 1.,  ..., 1., 1., 1.],\n",
+              "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+              "        [0., 1., 1.,  ..., 1., 0., 0.]])"
             ]
           },
           "metadata": {},
-          "execution_count": 109
+          "execution_count": 182
         }
       ]
     },
@@ -530,15 +540,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n6eAzxsn1Wdm",
-        "outputId": "46f69ee5-c27a-4361-baa3-a67a3f0d9a1c"
+        "outputId": "d8ee864a-fb4b-4741-9119-3e32cd6680f8"
       },
-      "execution_count": 110,
+      "execution_count": 183,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Exact match accuracy: 0.2308\n"
+            "Exact match accuracy: 0.3419\n"
           ]
         }
       ]
@@ -554,15 +564,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FJpHkLDFlpOb",
-        "outputId": "f2923316-fa6a-4aef-a573-75a35faee8dd"
+        "outputId": "1cd74007-6970-4552-cd47-5011c89d4e34"
       },
-      "execution_count": 111,
+      "execution_count": 184,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Sample-wise accuracy: 0.7149\n"
+            "Sample-wise accuracy: 0.7198\n"
           ]
         }
       ]
@@ -582,22 +592,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "k81Q9B8alrWF",
-        "outputId": "98fe9acd-1b11-4a25-ea15-54e301894445"
+        "outputId": "0aae9ba9-d34e-4276-f6bd-1907ca9eb3a9"
       },
-      "execution_count": 112,
+      "execution_count": 185,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Atelectasis: 0.4915\n",
-            "Cardiomegaly: 0.7436\n",
-            "Consolidation: 0.7949\n",
-            "Edema: 0.8291\n",
-            "Pleural Effusion: 0.6368\n",
-            "Pneumonia: 0.7735\n",
-            "Pneumothorax: 0.7350\n",
-            "Macro (mean per-label) accuracy: 0.7149\n"
+            "Atelectasis: 0.6282\n",
+            "Cardiomegaly: 0.7350\n",
+            "Consolidation: 0.7350\n",
+            "Edema: 0.7991\n",
+            "Pleural Effusion: 0.5983\n",
+            "Pneumonia: 0.7821\n",
+            "Pneumothorax: 0.7607\n",
+            "Macro (mean per-label) accuracy: 0.7198\n"
           ]
         }
       ]
@@ -605,33 +615,31 @@
     {
       "cell_type": "code",
       "source": [
-        "# تبدیل به numpy\n",
         "y_true = labels.cpu().numpy()\n",
         "y_pred = preds.cpu().numpy()\n",
         "\n",
-        "# گزارش کامل: Precision, Recall, F1 برای هر لیبل\n",
         "target_names = ['Atelectasis', 'Cardiomegaly', 'Consolidation', 'Edema',\n",
         "                'Pleural Effusion', 'Pneumonia', 'Pneumothorax']\n",
         "\n",
         "print(\"🔍 Classification Report (Macro & Per-label):\")\n",
         "print(classification_report(y_true, y_pred, target_names=target_names, zero_division=0))\n",
         "\n",
-        "# 🎯 Hamming Loss\n",
+        "#  Hamming Loss\n",
         "hl = hamming_loss(y_true, y_pred)\n",
-        "print(f\"\\n📉 Hamming Loss: {hl:.4f}\")\n",
+        "print(f\"\\n Hamming Loss: {hl:.4f}\")\n",
         "\n",
         "# ⚖️ Exact Match Ratio (sample-wise accuracy)\n",
         "exact_match = np.all(y_true == y_pred, axis=1).mean()\n",
-        "print(f\"✅ Exact Match Accuracy: {exact_match:.4f}\")"
+        "print(f\" Exact Match Accuracy: {exact_match:.4f}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_EQYQaV7lv2r",
-        "outputId": "332a8929-2a11-4ab1-c8c6-56199d97cc3d"
+        "outputId": "5721f53e-554f-4863-ae2a-7949de4015b7"
       },
-      "execution_count": 116,
+      "execution_count": 186,
       "outputs": [
         {
           "output_type": "stream",
@@ -640,22 +648,22 @@
             "🔍 Classification Report (Macro & Per-label):\n",
             "                  precision    recall  f1-score   support\n",
             "\n",
-            "     Atelectasis       0.36      0.62      0.46        80\n",
-            "    Cardiomegaly       0.58      0.43      0.49        68\n",
-            "   Consolidation       0.35      0.55      0.43        33\n",
-            "           Edema       0.55      0.62      0.58        45\n",
-            "Pleural Effusion       0.33      0.25      0.29        67\n",
-            "       Pneumonia       0.06      0.38      0.10         8\n",
-            "    Pneumothorax       0.05      0.38      0.09         8\n",
+            "     Atelectasis       0.41      0.21      0.28        80\n",
+            "    Cardiomegaly       0.55      0.51      0.53        68\n",
+            "   Consolidation       0.28      0.58      0.38        33\n",
+            "           Edema       0.49      0.73      0.58        45\n",
+            "Pleural Effusion       0.29      0.27      0.28        67\n",
+            "       Pneumonia       0.04      0.25      0.07         8\n",
+            "    Pneumothorax       0.00      0.00      0.00         8\n",
             "\n",
-            "       micro avg       0.33      0.48      0.39       309\n",
-            "       macro avg       0.33      0.46      0.35       309\n",
-            "    weighted avg       0.41      0.48      0.42       309\n",
-            "     samples avg       0.19      0.26      0.18       309\n",
+            "       micro avg       0.31      0.40      0.35       309\n",
+            "       macro avg       0.29      0.36      0.30       309\n",
+            "    weighted avg       0.39      0.40      0.38       309\n",
+            "     samples avg       0.09      0.22      0.12       309\n",
             "\n",
             "\n",
-            "📉 Hamming Loss: 0.2851\n",
-            "✅ Exact Match Accuracy: 0.2308\n"
+            " Hamming Loss: 0.2802\n",
+            " Exact Match Accuracy: 0.3419\n"
           ]
         }
       ]
@@ -663,7 +671,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# امتحان چند آستانه و انتخاب بهترین\n",
         "best_threshold = 0.0\n",
         "best_f1 = 0.0\n",
         "\n",
@@ -674,22 +681,22 @@
         "        best_f1 = f1\n",
         "        best_threshold = t\n",
         "\n",
-        "print(f\"✅ بهترین threshold: {best_threshold:.2f} با F1: {best_f1:.4f}\")\n"
+        "print(f\"  threshold: {best_threshold:.2f} با F1: {best_f1:.4f}\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "S9qP2tdevT9z",
-        "outputId": "19e308b0-7835-4f9d-e8b4-5a5f4ba944c1"
+        "outputId": "00ef30a4-40b4-4edf-8124-107e55743201"
       },
-      "execution_count": 120,
+      "execution_count": 187,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "✅ بهترین threshold: 0.50 با F1: 0.3480\n"
+            "  threshold: 0.50 با F1: 0.3036\n"
           ]
         }
       ]
